# cg

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: Pinhole.cpp  Prespective.cpp  Raster.cpp  Raytracer.cpp
math/: CMakeLists.txt
math/include/math/: Mat4.h  Polar.h  Sphere.h  Vec2.h  Vec3.h  Vec4.h
playground/: CMakeLists.txt
playground/src/: playground.cpp
