cmake_minimum_required(VERSION 3.10)

set(CG_MAJOR_VERSION 0)
set(CG_MINOR_VERSION 0)
set(CG_PATCH_VERSION 1)
set(CG_VERSION ${CG_MAJOR_VERSION}.${CG_MINOR_VERSION}.${CG_PATCH_VERSION})

project(cg VERSION ${CG_VERSION} LANGUAGES CXX C)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/$<CONFIG>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/$<CONFIG>")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/$<CONFIG>")

add_subdirectory(math)
add_subdirectory(playground)
add_subdirectory(examples)